Vpc.tf
# Create a VPC
resource "aws_vpc" "test4bcase_main" {
  cidr_block = "10.0.0.0/16"
}
